one of the last points of the process, styling

--- a/src/pages/Register/Register.Module.css
+++ b/src/pages/Register/Register.Module.css
@@ -6,10 +6,10 @@ body{
 
 .div{
     
-    margin-top: 8%;
+    /* margin-top: 8%;
     margin-right: 10%;
     width: 50%;
-    float: right
+    float: right */
     
 }
 
